basic user interface

--- a/views/user/layout/footer.ejs
+++ b/views/user/layout/footer.ejs
@@ -11,23 +11,20 @@
 
     <!-- Right -->
     <div>
-      <a href="" class="me-4 text-reset">
+      <a href="https://www.facebook.com/pemkotmanado/" target="_blank" class="me-4 text-reset">
         <i class="fab fa-facebook-f"></i>
       </a>
-      <a href="" class="me-4 text-reset">
+      <a href="https://twitter.com/pemkotmanado?lang=en" target="_blank" class="me-4 text-reset">
         <i class="fab fa-twitter"></i>
       </a>
-      <a href="" class="me-4 text-reset">
+      <a href="https://www.google.com/search?q=dinas+kominfo+kota+manado&ei=AJOoYpPIK8Xaz7sP2-eU4Aw&ved=0ahUKEwiTyNboi634AhVF7XMBHdszBcwQ4dUDCA0&uact=5&oq=dinas+kominfo+kota+manado&gs_lcp=Cgdnd3Mtd2l6EAMyBQgAEIAEMgYIABAeEBYyAggmOgcIABBHELADOgQIABBDOgoILhDHARCvARBDOgsIABCABBCxAxCDAToMCC4QxwEQrwEQChBDOgsILhCABBDHARCvAToICAAQgAQQyQM6EQguEIAEELEDEIMBEMcBEK8BOggIABAeEBYQCkoECEEYAEoECEYYAFDaEljgJ2DpKWgCcAF4AIABzwGIAdIfkgEGMC4yNC4xmAEAoAEByAEIwAEB&sclient=gws-wiz" target="_blank" class="me-4 text-reset">
         <i class="fab fa-google"></i>
       </a>
-      <a href="" class="me-4 text-reset">
+      <a href="https://www.instagram.com/pemerintahkotamanado/?utm_source=ig_embed" target="_blank" class="me-4 text-reset">
         <i class="fab fa-instagram"></i>
       </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-github"></i>
+      <a href="https://www.youtube.com/channel/UCKp0bghD0aE2gjcwdqwgqhg" target="_blank" class="me-4 text-reset">
+        <i class="fab fa-youtube"></i>
       </a>
     </div>
     <!-- Right -->
@@ -43,10 +40,10 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>DISKOMINFO
+            <i class="fas fa-gem me-3"></i>TENTANG KAMI
           </h6>
           <p>
-            Diskominfo merupakan unsur pelaksana urusan pemerintahan di bidang komunikasi, informatika, persandian dan statistik.
+            Dinas Kominfo adalah salah satu Dinas Teknis di lingkungan Pemerintah Kota Manado yang memiliki kewenangan untuk urusan Pemerintahan di bidang Teknologi Informatika
           </p>
         </div>
         <!-- Grid column -->
@@ -99,12 +96,12 @@
           <h6 class="text-uppercase fw-bold mb-4">
             Contact
           </h6>
-          <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+          <p><i class="fas fa-home me-3"></i> Jl. Balaikota No. 01 Lt. 1 Tikala Ares Manado - Sulawesi Utara</p>
           <p>
             <i class="fas fa-envelope me-3"></i>
             info@example.com
           </p>
-          <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
+          <p><i class="fas fa-phone me-3"></i> (0431) 851103</p>
           <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
         </div>
         <!-- Grid column -->
