--- a/views/user/layout/main.ejs
+++ b/views/user/layout/main.ejs
@@ -11,6 +11,8 @@
     <!-- Boostrap Icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- AOS Library -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -27,7 +29,7 @@
         }
 
         #home {
-            background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(/home-bg.jpg);
+            background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(/image/home-bg.jpg);
             background-size: cover;
             color: white;
             height: 40rem;
@@ -37,20 +39,14 @@
             background-color: rgba(0, 0, 0, 0.6);
         }
 
-        .navbar {
-            background-color: rgba(0, 0, 0, 0.6);
-            filter: blur(100%);
+        #agenda {
+            color: rgba(33, 37, 41, 1);
         }
+
     </style>
 </head>
 <body>
-    <!-- <header>
-        <%- include('nav')%> 
-    </header> -->
-    
     <main>
-        <!-- Content -->
-        <!-- <%- body %> -->
         <%- include('../index') %> 
     </main>
 
