Detail agenda page and some change that i forgot, just wanna make a checkpoint

--- a/views/user/layout/main.ejs
+++ b/views/user/layout/main.ejs
@@ -22,10 +22,8 @@
     <style>
         body {
             background: rgb(230, 230, 230);
-            /*background-image: url(/home-bg.webp);
-            background-attachment: scroll;
-            background-size: 100%;
-            background-repeat: no-repeat; */
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            /* font-family: Georgia, 'Times New Roman', Times, serif; */
         }
 
         #home {
@@ -47,7 +45,7 @@
 </head>
 <body>
     <main>
-        <%- include('../index') %> 
+        <%- body %> 
     </main>
 
     <%- include('footer') %> 
