--- a/views/user/agenda.ejs
+++ b/views/user/agenda.ejs
@@ -4,17 +4,21 @@
             <img src="/image/user-profile/profile-pic.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"><%= locals.userName %></h5>
-              <h6 class="card-subtitle mb-5 text-muted"><%= locals.userEmail %></h6>
-              <a href="/user/logout" class="card-link text-danger" style="text-decoration: none;">Logout</a>
+              <h6 class="card-subtitle mb-3 text-muted"><%= locals.userEmail %></h6>
             </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    <a href="/user/logout" class="card-link text-danger" style="text-decoration: none;">Logout</a>
+                </li>
+              </ul>
           </div>
     </div>
     <div class="col-md-6 col-lg-7 col-xl-9">
-        <div class="row mb-4">
+        <div class="row mb-3">
             <h3>Agenda</h3>
         </div>
         
-        <% if (agenda) { %>
+        <% if (agenda.length === 0) { %>
             <div class="row mb-3">
                 <div class="col">
                     <div class="alert alert-primary alert-dismissible fade show">
@@ -27,11 +31,12 @@
         
         <div class="row">
             <div class="col">
-                <table class="table table-secondary mb-4">
+                <table class="table table-secondary mb-4" style="overflow: auto; max-height: 350px;">
                     <thead>
                       <tr>
                         <th scope="col" style="width: 3rem;">No</th>
                         <th scope="col">Agenda</th>
+                        <th scope="col">Author</th>
                         <th scope="col">Status</th>
                         <th scope="col" style="width: 5rem;">Detail</th>
                       </tr>
@@ -39,18 +44,19 @@
                     <tbody>
                         <% agenda.forEach((agenda, index) => { %>
                             <tr>
-                              <th scope="row">1</th>
-                              <td>Mark</td>
-                              <td>Otto</td>
-                              <td>@mdo</td>
+                              <td scope="row"><%= index + 1 %></td>
+                              <td><%= agenda.name  %></td>
+                              <td><%= agenda.author %></td>
+                              <td><%= agenda.status %></td>
+                              <td>
+                                <a href="/<%= agenda.id %>">Detail</a>
+                              </td>
                             </tr>
                         <% }) %>
                     </tbody>
                   </table>
-        
-                  <div class="text-center">
-                      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalAgenda">Tambah Agenda</button>
-                  </div>
+
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalAgenda">Tambah Agenda</button>
             </div>
         </div>
     </div>
@@ -68,7 +74,7 @@
             <form method="POST" action="/agenda">
                 <div class="mb-3">
                   <label for="name" class="form-label">Nama Agenda</label>
-                  <input type="text" class="form-control" id="name" name="email" aria-describedby="emailHelp" required>
+                  <input type="text" class="form-control" id="name" name="name" aria-describedby="emailHelp" required>
                 </div>
                 <div class="mb-3">
                   <label for="date" class="form-label">Date</label>
