--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,10 +1,9 @@
 <div class="row">
   <div class="col-md-5 col-lg-4 col-xl-3 mb-lg-0 mb-5">
     <div class="card" style="width: 14rem; background-color: rgba(248, 249, 250, 1);">
-      <img src="/image/user-profile/profile-pic.webp" class="card-img-top" alt="...">
+      <img src="/image/user-profile/default.webp" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title"><%= locals.userName %></h5>
-        <h6 class="card-subtitle mb-5 text-muted"><%= locals.userEmail %></h6>
+        <h6 class="card-subtitle mb-5 text-muted text-center">Siapa?</h6>
       </div>
     </div>
   </div>
