--- a/views/user/layout/footer.ejs
+++ b/views/user/layout/footer.ejs
@@ -5,7 +5,7 @@
   >
     <!-- Left -->
     <div class="me-5 d-none d-lg-block">
-      <span>Get connected with us on social networks:</span>
+      <span>Terhubung dengan kami di jaringan sosial :</span>
     </div>
     <!-- Left -->
 
@@ -52,19 +52,16 @@
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
-            Products
+            Official Links
           </h6>
           <p>
-            <a href="#!" class="text-reset">Angular</a>
+            <a href="https://diskominfo.manadokota.go.id/" target="_blank" class="text-reset">Diskominfo</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">React</a>
+            <a href="https://diskominfo.manadokota.go.id/berita" target="_blank" class="text-reset">Berita</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Vue</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Laravel</a>
+            <a href="https://diskominfo.manadokota.go.id/album" target="_blank" class="text-reset">Galeri</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -73,19 +70,16 @@
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
-            Useful links
+            .
           </h6>
           <p>
-            <a href="#!" class="text-reset">Pricing</a>
+            <a href="https://diskominfo.manadokota.go.id/site/tupoksi" target="_blank" class="text-reset">Tugas & Fungsi</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Settings</a>
+            <a href="https://diskominfo.manadokota.go.id/site/struktur" target="_blank" class="text-reset">Struktur Organisasi</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Orders</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Help</a>
+            <a href="https://diskominfo.manadokota.go.id/site/visi_misi" target="_blank" class="text-reset">Visi & Misi</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -99,10 +93,9 @@
           <p><i class="fas fa-home me-3"></i> Jl. Balaikota No. 01 Lt. 1 Tikala Ares Manado - Sulawesi Utara</p>
           <p>
             <i class="fas fa-envelope me-3"></i>
-            info@example.com
+            tu.rohumas@kominfo.go.id
           </p>
           <p><i class="fas fa-phone me-3"></i> (0431) 851103</p>
-          <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
         </div>
         <!-- Grid column -->
       </div>
@@ -113,7 +106,7 @@
 
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2021 Copyright:
+    © 2022 Copyright:
     <a class="text-reset fw-bold" target="_blank" href="https://valenoirs.github.io/profile">Valenoirs</a>
   </div>
   <!-- Copyright -->
