mongoose favicon.ico bug fixed & adding animate on scroll

--- a/views/user/detail.ejs
+++ b/views/user/detail.ejs
@@ -1,5 +1,5 @@
 <div class="container-fluid mb-5" style="background-color: rgb(248, 249, 250);">
-    <div class="row">
+    <div class="row" data-aos="fade-down">
         <div class="col p-5">
             <h1 class="display-6">Rincian Agenda</h1>
             <% if (error.length > 0) { %>
