--- a/views/user/agenda.ejs
+++ b/views/user/agenda.ejs
@@ -1,4 +1,4 @@
-<div id="agenda" class="row">
+<div id="agenda" class="row" data-aos="fade-up">
     <div class="col-md-5 col-lg-4 col-xl-3 mb-lg-0 mb-5">
         <div class="card text" style="width: 14rem; background-color: rgba(248, 249, 250, 1);">
             <img src="/image/user-profile/profile-pic.webp" class="card-img-top" alt="...">
