--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,6 +1,6 @@
-<div class="container-fluid mb-5">
+<div class="container-fluid mb-5" data-aos="slide-down">
     <div id="home" class="row d-flex align-items-center justify-content-center">
-        <div id="home-content" class="col-md-8 col-sm-12 text-center p-5">
+        <div id="home-content" class="col-md-8 col-sm-12 text-center p-5" data-aos="slide-down">
             <div class="row mb-3">
                 <blockquote class="blockquote">Agenda</blockquote>
                 <h3 class="display-6">Dinas Komunikasi dan Informatika</h3>
@@ -21,7 +21,7 @@
             <% if (error.length > 0) { %>
             <div class="row">
                 <div class="col">
-                    <div class="alert alert-danger alert-dismissible fade show">
+                    <div class="alert alert-primary alert-dismissible fade show">
                         <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                         <i class="fa-solid fa-circle-info"></i> <%= error %>
                     </div>
