--- a/views/user/layout/footer.ejs
+++ b/views/user/layout/footer.ejs
@@ -107,7 +107,7 @@
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2022 Copyright:
-    <a class="text-reset fw-bold" target="_blank" href="https://valenoirs.github.io/profile">Valenoirs</a>
+    <a class="text-reset fw-bold" target="_blank" href="https://valenoirs.github.io/profile" style="text-decoration: none;">valenoirs</a>
   </div>
   <!-- Copyright -->
 </footer>
