--- a/views/user/layout/main.ejs
+++ b/views/user/layout/main.ejs
@@ -17,8 +17,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Icon -->
-    <link rel="shortcut icon" type="image/png" href="./favicon.ico" />
-
+    <link rel="icon" href="http://localhost:5000/image/favicon.ico">
     <style>
         body {
             background: rgb(230, 230, 230);
