--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" data-aos="fade-up">
   <div class="col-md-5 col-lg-4 col-xl-3 mb-lg-0 mb-5">
     <div class="card" style="width: 14rem; background-color: rgba(248, 249, 250, 1);">
       <img src="/image/user-profile/default.webp" class="card-img-top" alt="...">
