update time & date format

--- a/views/user/agenda.ejs
+++ b/views/user/agenda.ejs
@@ -37,7 +37,7 @@
                         <th scope="col" style="width: 3rem;">No</th>
                         <th scope="col">Agenda</th>
                         <th scope="col">Author</th>
-                        <th scope="col">Waktu Pelaksanaan</th>
+                        <th scope="col">Hari Pelaksanaan</th>
                         <th scope="col">Status</th>
                         <th scope="col" style="width: 5rem;">Detail</th>
                       </tr>
@@ -48,7 +48,7 @@
                               <td scope="row"><%= index + 1 %></td>
                               <td><%= agenda.name %></td>
                               <td><%= agenda.author %></td>
-                              <td><%= agenda.date.toLocaleString('id') %></td>
+                              <td><%= agenda.date.toLocaleString('id', {weekday: 'long', day: 'numeric', month: 'long', year: 'numeric'}) %></td>
                               <td><%= agenda.status %></td>
                               <td>
                                 <a href="/<%= agenda.id %>">Detail</a>
