footer animation and aos offset

--- a/views/user/detail.ejs
+++ b/views/user/detail.ejs
@@ -1,4 +1,4 @@
-<div class="container-fluid mb-5" style="background-color: rgb(248, 249, 250);">
+<div class="container-fluid" style="background-color: rgb(248, 249, 250);">
     <div class="row" data-aos="fade-down">
         <div class="col p-5">
             <h1 class="display-6">Rincian Agenda</h1>
@@ -61,6 +61,7 @@
                 <button class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#modalDelete" style="width: 100px;"><i class="bi bi-trash3-fill"></i> Hapus</button>
               </div>
         </div>
+        <hr>
     </div>
 </div>
 
