waiting client approval

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -2,13 +2,14 @@
     <div id="home" class="row d-flex align-items-center justify-content-center">
         <div id="home-content" class="col-md-8 col-sm-12 text-center p-5" data-aos="slide-down">
             <div class="row mb-3">
-                <blockquote class="blockquote">Agenda</blockquote>
+                <!-- <blockquote class="blockquote">Agenda</blockquote> -->
+                <h4>Agenda</h4>
                 <h3 class="display-6">Dinas Komunikasi dan Informatika</h3>
                 <h3 class="display-6">Kota Manado</h3>
             </div>
             <div class="row justify-content-center">
                 <div class="col-2">
-                    <img src="./image/kominfo.png" alt="" style="height: 100px;">
+                    <img src="./image/kominfo-white.webp" alt="" style="height: 100px;">
                 </div>
             </div>
         </div>
