--- a/views/user/agenda.ejs
+++ b/views/user/agenda.ejs
@@ -8,7 +8,7 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
-                    <a href="/user/logout" class="card-link text-danger" style="text-decoration: none;">Logout</a>
+                    <a href="/user/logout" class="card-link text-danger" style="text-decoration: none;"><i class="bi bi-box-arrow-in-left"></i> Logout</a>
                 </li>
               </ul>
           </div>
@@ -58,7 +58,7 @@
                     </tbody>
                   </table>
 
-                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalAgenda">Tambah Agenda</button>
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalAgenda"><i class="bi bi-calendar-plus"></i> Tambah Agenda</button>
             </div>
         </div>
     </div>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
-                  <button type="submit" class="btn btn-primary">Tambah Agenda</button>
+                  <button type="submit" class="btn btn-primary"><i class="bi bi-calendar-plus"></i> Tambah Agenda</button>
                 </div>
             </form>
         </div>
