--- a/views/user/detail.ejs
+++ b/views/user/detail.ejs
@@ -1,3 +1,12 @@
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(235, 236, 237);" data-aos="fade-right">
+  <div class="container-fluid">
+    <a class="navbar-brand p-2 ms-5 text-secondary" href="#">
+      <img src="./image/kominfo-grey.webp" alt="logo kominfo" height="30px">
+      Agenda
+    </a>
+  </div>
+</nav>
+
 <div class="container-fluid" style="background-color: rgb(248, 249, 250);">
     <div class="row" data-aos="fade-down">
         <div class="col p-5">
@@ -47,7 +56,17 @@
                   <tr>
                     <th scope="row">Status</th>
                     <td>:</td>
-                    <td><%= agenda.status %></td>
+                    <td>
+                      <form method="POST" action="/agenda?_method=PUT">
+                        <%= agenda.status %>
+                        <input type="hidden" name="id" value=<%= agenda.id %>>
+                        <% if (agenda.status === 'Belum Dimulai') { %>
+                          <button type="submit" class="btn text-primary ms-3" style="border: 0;padding: 0;">
+                            <i class="bi bi-calendar-check-fill"></i> Selesai
+                          </button>
+                        <% } %>
+                      </form>
+                    </td>
                   </tr>
                   <tr>
                     <th scope="row">Keterangan</th>
@@ -74,7 +93,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-          <form method="POST" action="/agenda?_method=PUT">
+          <form method="POST" action="/agenda?_method=PATCH">
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Agenda</label>
                 <input type="text" class="form-control" id="name" name="name" value="<%= agenda.name %>" aria-describedby="emailHelp" required>
