--- a/views/user/agenda.ejs
+++ b/views/user/agenda.ejs
@@ -1,7 +1,10 @@
 <div id="agenda" class="row" data-aos="fade-up">
     <div class="col-md-5 col-lg-4 col-xl-3 mb-lg-0 mb-5">
         <div class="card text" style="width: 14rem; background-color: rgba(248, 249, 250, 1);">
-            <img src="/image/user-profile/profile-pic.webp" class="card-img-top" alt="...">
+            <a role="button" id="dropdownUpload" data-bs-toggle="modal" data-bs-target="#modalUpload" aria-expanded="false">
+              <img src=<%= locals.userPic %> class="card-img-top" alt="...">
+            </a>
+            
             <div class="card-body">
               <h5 class="card-title"><%= locals.userName %></h5>
               <h6 class="card-subtitle mb-3 text-muted"><%= locals.userEmail %></h6>
@@ -96,6 +99,28 @@
                 </div>
             </form>
         </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal Upload -->
+  <div class="modal fade" id="modalUpload" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form class="p-3" enctype="multipart/form-data" method="POST" action="/user?_method=PUT">
+            <input type="file" class="form-control mb-3" id="file" name="file">
+            <p class="text-danger">*png, jpg, jpeg, webp</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary"><i class="bi bi-upload"></i> Upload</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
